--- a/Sistema-Gestion-Agro-Industrial/web/img/splashy/splashy.css
+++ b/Sistema-Gestion-Agro-Industrial/web/img/splashy/splashy.css
@@ -362,4 +362,6 @@
 .splashy-warning_triangle_small{ background-position: -63px -1491px} 
 .splashy-zoom{ background-position: -63px -1512px} 
 .splashy-zoom_in{ background-position: -63px -1533px} 
-.splashy-zoom_out{ background-position: -63px -1554px} 
+.splashy-zoom_out{ background-position: -63px -1554px} #@@@ {
+
+}
