--- a/Sistema-Gestion-Agro-Industrial/web/operaciones/etiquetas/etiqueta_traza.jrxml
+++ b/Sistema-Gestion-Agro-Industrial/web/operaciones/etiquetas/etiqueta_traza.jrxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" columnCount="2" pageWidth="324" pageHeight="223" columnWidth="162" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="568ade77-4793-47c8-bebe-8c5adda5386a">
 	<property name="ireport.zoom" value="2.1435888100000056"/>
-	<property name="ireport.x" value="29"/>
-	<property name="ireport.y" value="0"/>
-	<parameter name="codigoBarrasNro1" class="java.io.InputStream"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="135"/>
+	<parameter name="codigoBarrasNro1" class="java.lang.String"/>
 	<parameter name="variedad" class="java.lang.String"/>
 	<parameter name="productor" class="java.lang.String"/>
 	<parameter name="ggn" class="java.lang.String"/>
@@ -14,7 +14,7 @@
 	<parameter name="envase" class="java.lang.String"/>
 	<parameter name="lote" class="java.lang.String"/>
 	<parameter name="calibre" class="java.lang.String"/>
-	<parameter name="codigoBarrasNro2" class="java.io.InputStream"/>
+	<parameter name="codigoBarrasNro2" class="java.lang.String"/>
 	<parameter name="variedad2" class="java.lang.String"/>
 	<parameter name="productor2" class="java.lang.String"/>
 	<parameter name="ggn2" class="java.lang.String"/>
